add eureka server and spring cloud gateway, edit paths in controllers and fix dependencies